antrea/allow-ext.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: allow-all-egress-dns-service
  namespace: packages
spec:
  priority: 8
  tier: securityops
  appliedTo:
    - namespaceSelector: {}
    - group: "test-cg-svc-ref"

  ingress:
    - action: Allow
      from:
        - group: "dev-k8s-jumpbox"
      name: "allow-nginx-service"
