antrea/allow-ingress-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-my-app
  namespace: packages
spec:
  podSelector: {}
    matchLabels:
#     app.kubernetes.io/instance=my-release
      run: dnstools
  ingress:
  - {}
#  - from:
#    - podSelector: {}
      ports:
        - port: 80
          protocol: TCP
