antrea/corepermit.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: allow-all-egress-dns-service
  namespace: packages
spec:
  priority: 8
  tier: securityops
  appliedTo:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: my-release
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: packages

#    - namespaceSelector: {}
    - group: "test-cg-svc-ref"
#        matchLabels:
#          k8s-app: kube-dns
  ingress:
      - action: Drop
        from:
          - ipBlock:
              cidr: 10.244.2.48/28
        name: givemealog
        enableLogging: true
      - action: Allow
        from:
          - ipBlock:
              cidr: 172.20.0.0/16
        name: givemealog2
        enableLogging: true
#  egress:
#    - action: Allow
#      toServices:
#        - name: kube-dns
#          namespace: kube-system
#        - name: nginx-source-wkld
#          namespace: default
#      name: "allow-nginx-service"
