antrea/egr-allow-ant.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: NetworkPolicy
metadata:
  name: test-ngnix-allow
  namespace: test
spec:
    priority: 100
    tier: securityops
    appliedTo:
      - podSelector:
          matchLabels:
            run: dnstools
    egress:
      - action: Allow
        to:
          - podSelector:
              matchLabels:
                app.kubernetes.io/instance: my-release
            namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: packages
        ports:
          - protocol: TCP
            port: 80
          - protocol: TCP
            port: 8080
        name: AllowThirdParty
        enableLogging: true
