antrea/external-egress-allow-acnp.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: acnp-deny-external-client-nodeport-svc-access
spec:
  priority: 5
  tier: securityops
  appliedTo:
    - service:
        name: my-release-nginx
        namespace: packages
  ingress:
    - action: Permit
      from:
        - ipBlock:
            cidr: 10.120.96.30/19
    - action: Permit
      from:
        - ipBlock:
            cidr: 10.120.96.41/19
