antrea/global-ns-denyall.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: global-denyall-ig-eg
spec:
  priority: 9
  tier: securityops
  appliedTo:
    - group: "test-cg-svc-ref"

    - namespaceSelector:          # Selects all non-system Namespaces in the cluster
        matchExpressions:
          - key:  kubernetes.io/metadata.name
            operator: NotIn
            values:
            - avi-system
            - kube-node-lease
            - kube-public
            - kube-system
            - secretgen-controller
            - tanzu-continuousdelivery-resources
            - tanzu-fluxcd-packageinstalls
            - tanzu-kustomize-controller
            - tanzu-source-controller
            - tkg-system
            - vmware-system-auth
            - vmware-system-cloud-provider
            - vmware-system-csi
            - vmware-system-tkg
            - external-namespace
            - vmware-system-tmc
  ingress:
    - action: Pass
      from:
        - namespaces:
            match: Self           # Skip ACNP evaluation for traffic from Pods in the same Namespace
      name: PassFromIGSameNS
      enableLogging: true
    - action: Drop
      from:
        - namespaceSelector: {}   # Drop from Pods from all other Namespaces
      name: DropFromAllIGOtherNS
      enableLogging: true
  egress:
    - action: Pass
      to:
        - namespaces:
            match: Self           # Skip ACNP evaluation for traffic to Pods in the same Namespace
      name: PassToEGSameNS
      enableLogging: true
    - action: Drop
      to:
        - namespaceSelector: {}   # Drop to Pods from all other Namespaces
      name: DropToAllEGOtherNS
      enableLogging: true
