antrea/ing-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-my-app
  namespace: packages
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
#      run: dnstools
  policyTypes:
    - Ingress
  ingress:
    - from:
        # - ipBlock:
        #     cidr: 172.17.0.0/16
        #     except:
        #       - 172.17.1.0/24
        # - namespaceSelector:
        #     matchLabels:
        #       project: myproject
        - podSelector:
            matchLabels:
#              app.kubernetes.io/instance: my-release
              run: dnstool
##              role: frontend
      ports:
        - protocol: TCP
          port: 80
  # egress:
  #   - to:
  #       - ipBlock:
  #           cidr: 10.0.0.0/24
  #     ports:
  #       - protocol: TCP
  #         port: 5978
