antrea/namespacecorepermit-ext.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: NetworkPolicy
metadata:
  name: allow-to-nginx-svc
  namespace: packages
spec:
  priority: 5
  tier: securityops
  appliedTo:
      - podSelector:
          matchLabels:
            app.kubernetes.io/instance: my-release
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: packages

#    - service:
#        name: my-release-nginx
#        namespace: packages

#    - group: "test-cg-svc-ref"
#        matchLabels:
#          k8s-app: kube-dns
  ingress:
      - action: Allow
        from:
          - ipBlock:
              cidr: 10.244.2.48/28 #changeme probably
        name: givemealog
        enableLogging: true
#      - action: Allow
#        from:
#          - ipBlock:
#              cidr: 172.16.80.0/24
#        name: givemealog2
#        enableLogging: true
  egress:
    - action: Allow
      toServices:
        - name: kube-dns
          namespace: kube-system
#        - name: nginx-source-wkld
#          namespace: default
      name: "allow-nginx-service"
