antrea/namespacecorepermit.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: NetworkPolicy
metadata:
  name: allow-to-nginx-svc
  namespace: packages
spec:
  priority: 5
  tier: securityops
  appliedTo:
    - group: "test-grp-svc-ref"
#        matchLabels:
#          k8s-app: kube-dns
  ingress:
      - action: Allow
        from:
          - ipBlock:
              cidr: 172.16.40.0/24 #changeme probably
        name: givemealog
        enableLogging: true
      - action: Allow
        from:
          - ipBlock:
              cidr: 172.16.80.0/24
        name: givemealog2
        enableLogging: true
  egress:
    - action: Allow
      toServices:
        - name: kube-dns
          namespace: kube-system
        - name: nginx-source-wkld
          namespace: default
      name: "allow-nginx-service"
