antrea/test-external.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: NetworkPolicy
metadata:
  name: test-anp-external
  namespace: packages
spec:
    priority: 100
    tier: securityops
    appliedTo:
      - podSelector:
          matchLabels:
            app.kubernetes.io/instance: my-release
    ingress:
      - action: Allow
        from:
          - podSelector:
              matchLabels:
                run: dnstools
            namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: dev-test1
        ports:
          - protocol: TCP
            port: 8080
            endPort: 8080
        name: AllowFromFrontend
        enableLogging: false
    egress:
      - action: Allow
        to:
          - ipBlock:
              cidr: 10.244.2.48/28
        ports:
          - protocol: TCP
            port: 8080
        name: DropToThirdParty
        enableLogging: true
